--- a/grid_sample.css
+++ b/grid_sample.css
@@ -9,26 +9,16 @@ body {
   display: grid;
   grid-template-rows: 150px;
   grid-template-columns: 50vw 1fr;
-
-  padding: 0 5vw;
-  background: white;
 }
 
 #title {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
-
-  line-height: 150px;
-  font-weight: initial;
-  font-size: 36px;
 }
 
 #description {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
-
-  line-height: 150px;
-  font-size: 16px;
 }
 
 
@@ -38,24 +28,11 @@ body {
   grid-gap: 8px;
   grid-template-rows: 150px 150px 150px 150px;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-
-  padding: 5vw;
-}
-
-.item {
-  line-height: 150px;
-  text-align: center;
-
-  background-color: white;
-  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.12), 
-              0 0 8px 2px rgba(0, 0, 0, 0.06);
 }
 
 .large-item {
   grid-row: 2 / span 2;
   grid-column: 2 / span 2;
-
-  line-height: 300px;
 }
 
 .long-width-item {
@@ -66,6 +43,54 @@ body {
 .long-height-item {
   grid-row: 1 / span 2;
   grid-column: 6 / span 1;
+}
 
+
+
+
+
+
+
+#header {
+  padding: 0 5vw;
+  background: white;
+}
+
+#title {
+  line-height: 150px;
+  font-weight: initial;
+  font-size: 36px;
+}
+
+#description {
+  line-height: 150px;
+  font-size: 16px;
+}
+
+
+
+#container {
+  padding: 5vw;
+}
+
+.item {
+  line-height: 150px;
+  text-align: center;
+  background-color: white;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.12), 
+              0 0 8px 2px rgba(0, 0, 0, 0.06);
+  transition: 0.2s;
+}
+
+.item:hover {
+  cursor: pointer;
+  background-color: antiquewhite;
+}
+
+.large-item {
+  line-height: 300px;
+}
+
+.long-height-item {
   line-height: 300px;
 }
